kuber-hw-05/src/service_back.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
