kuber-hw-05/src/service_front.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
