kuber-hw-05/src/ingress.yaml
apiVersion: networking.k8s.io/v1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: ubuntu.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-frontend
                port:
                  number: 80
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: app-backend
                port:
                  number: 8080
